# first-fastapi

./: .gitignore  pyproject.toml  readme.md  sql_app.db
app/: main.py
app/api/v1/endpoints/: users.py
app/crud/: user.py
app/models/: user.py
app/schemas/: user.py
